<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/purposeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_purpose"
        android:textSize="18sp"
        android:layout_below="@id/titleTextView"
        android:padding="16dp" />

    <TextView
        android:id="@+id/cheersTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_cheers"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/purposeTextView"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

</RelativeLayout>